# CryptoLib

./: CMakeLists.txt  LICENSE  README.md
include/: Caesar.h  Substitution.h
src/: Caesar.cpp  Substitution.cpp
tests/: CaesarTest.cpp  SubstitutionTest.cpp
